maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord && coord(1) > 0)
       ^JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), 0)
                ^JediEscaper:25: error: not found: value coord
  setIndication(coord(0), coord(1), 0)
                          ^JediEscaper:27: error: not found: value x
  marquerContour(Array[Int](x, y))
                            ^JediEscaper:27: error: not found: value y
  marquerContour(Array[Int](x, y))
                               ^